--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asttokens==2.2.1
+axios==0.4.0
 backcall==0.2.0
 bcrypt==4.0.1
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.7
 decorator==5.1.1
 dnspython==2.4.2
@@ -19,8 +22,11 @@ ipython==8.15.0
 itsdangerous==2.1.2
 jedi==0.19.0
 Jinja2==3.1.2
+lxml==4.9.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -30,11 +36,14 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
 python-dateutil==2.8.2
+requests==2.31.0
+rich==13.5.2
 six==1.16.0
 SQLAlchemy==2.0.20
 stack-data==0.6.2
 traitlets==5.9.0
 typing_extensions==4.7.1
+urllib3==2.0.4
 wcwidth==0.2.6
 Werkzeug==2.3.7
 WTForms==3.0.1
