--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-Bcrypt==1.0.1
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==21.2.0
 idna==3.4
 ipython==8.15.0
 itsdangerous==2.1.2
@@ -27,6 +28,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
+packaging==23.1
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
